# megamind

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEBASE_OVERVIEW.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MINION_WORKFLOW_TOOLS.md  README.md  STOCK_MOVEMENT_AGENT_IMPLEMENTATION.md  docker-compose.yml  generate_graph_image.py  langgraph.json  pyproject.toml  requirements.txt  test_enhanced_stock_movement_agent.py  test_extraction_fix.py  test_simplified_stock_movement.py  test_smart_stock_movement.py  test_stock_movement_agent.py
.github/workflows/: docker-publish.yml
app/: auth.py  config.py  gemini.py  main.py
app/clients/: frappe_client.py
app/graph/: builder.py  state.py
app/graph/nodes/: __init__.py  agent.py  check_cache.py  embedder.py  frappe_retriever.py  generate.py  retrieve.py
app/graph/tools/: retriever.py
app/models/: requests.py
app/utils/: config.py
nginx/: nginx.conf
notebooks/: chain_streaming.ipynb  parser.ipynb  postgres.ipynb  prompt_template.ipynb  rag.ipynb
scripts/: auto_deploy.sh  docker_cleanup.sh  seed_best_practices.py  validate_minion_integration.py
src/megamind/: base_prompt.py  configuration.py  main.py  prompts.py
src/megamind/alembic/: env.py
src/megamind/alembic/versions/: 1b34ccca48d6_add_default_value_to_match_count_in_.py  1c6b0dacd725_fix_match_documents_function_meta_field.py  41f22c4d521a_document_table_fields.py  76234f5a370d_correct_match_documents_function_.py  78ad32a339dd_fix_match_documents_id_change.py  8d07e2aa2862_rename_meta_field.py  9c749913d234_increase_embedding_dimension.py  ea1b10bb8434_create_documents_table.py  efaf07cb80ac_fix_match_documents_function_signature.py
src/megamind/api/v1/: document_extraction.py  minion.py  subagents.py  zep.py
src/megamind/clients/: firebase_client.py  frappe_client.py  manager.py  mcp_client_manager.py  minion_client.py  supa_client.py  titan_client.py  zep_checkpoint_saver.py  zep_client.py
src/megamind/dynamic_prompts/: README.md
src/megamind/dynamic_prompts/components/: __init__.py  accounting_finance_agent_role.py  accounting_finance_primary_function.py  agent_role.py  client_functions.py  communication_rules.py  constraints.py  context_info.py  examples.py  incorrect_usage.py  primary_directives.py  stock_movement_agent_role.py  stock_movement_execution_flow.py  stock_movement_primary_function.py  tool_usage.py
src/megamind/dynamic_prompts/core/: builder.py  models.py  registry.py
src/megamind/dynamic_prompts/variants/: accounting_finance.yaml  generic.yaml  stock_movement.yaml
src/megamind/factories/: __init__.py  llm_factory.py
src/megamind/graph/: __init__.py  builder.py  document_graph.py  exceptions.py  health.py  schemas.py  states.py  stock_movement_graph.py
src/megamind/graph/agents/: business_process_analyst.py  knowledge_analyst.py  operations_specialist.py  report_analyst.py  semantic_analyst.py  (+3 more)
src/megamind/models/: database.py  requests.py  responses.py
src/megamind/prompts/: __init__.py  corrective_rag.py  deep_agent_prompts.py  document_extraction.py  knowledge_capture.py  megamind.py  minion.py  role_generation.py  subagent_prompts.py
src/megamind/static/: chat-debug-tool.html
src/megamind/utils/: __init__.py  config.py  database.py  logger.py  parser.py  request_context.py  streaming.py
supabase/migrations/: 20250619060209_initial_schema.sql  20250717072800_add_primary_key_to_chat_contexts.sql
tests/: conftest.py  test_crag_integration.py  test_minion_workflow_tools.py  test_multi_agent_graph.py  test_prompt_builder.py
(+55 files in other folders)
