[project]
name = "megamind"
version = "0.1.0"
description = "Megamind is a python project which builds agents using LLMs and other tools."
authors = [
    {name = "Narantsatsralt Ganchuluun", email = "tsatsralt@aim.mn"},
    {name = "Altangadas Ulziisaikhan", email = "altangadas@aim.mn"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "google-genai (>=1.20.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "requests (>=2.32.4,<3.0.0)",
    "supabase (>=2.15.3,<3.0.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "langchain-docling (>=1.0.0,<2.0.0)",
    "langgraph-cli[inmem] (>=0.3.3,<0.4.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-mcp-adapters (>=0.1.7,<0.2.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
