[project]
name = "megamind"
version = "0.1.0"
description = "Megamind is a python project which builds agents using LLMs and other tools."
authors = [
    { name = "Narantsatsralt Ganchuluun", email = "tsatsralt@aim.mn" },
    { name = "Altangadas Ulziisaikhan", email = "altangadas@aim.mn" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.0,<0.117.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langgraph>=1.0.0,<2.0.0",
    "langchain>=1.1.0,<2.0.0",
    "langchain-google-genai>=2.0.0,<3.0.0",
    "langchain-anthropic>=1.0.0,<2.0.0",
    "langchain-openai>=0.3.0,<1.0.0",
    "requests (>=2.32.4,<3.0.0)",
    "supabase (>=2.15.3,<3.0.0)",
    "langchain-community>=0.3.31,<0.4.0",
    "loguru (>=0.7.3,<0.8.0)",
    "langchain-mcp-adapters (>=0.2.1,<0.3.0)",
    "llama-cloud-services>=0.6.41",
    "langgraph-cli[inmem]>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.21",
    "psycopg[binary,pool]>=3.2.9",
    "thefuzz>=0.22.1",
    "python-levenshtein>=0.25.1",
    "httpx>=0.27.0",
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "ruff>=0.13.1",
    "sentry-sdk[fastapi]>=2.38.0",
    "firebase-admin>=6.5.0",
    "zep-cloud>=3.13.0",
]

[dependency-groups]
dev = ["pytest>=9.0.1", "pytest-asyncio>=1.3.0", "pytest-mock>=3.15.1"]
